--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,6 @@
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-light fixed-top">
 				<div class="container-fluid">
-					<img class="navbar-brand logo_QA" src="{{ asset('assets/img/Logo_QA.png') }}"></img>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -75,5 +74,6 @@
 		<script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
 		<script src="{{ asset('assets/js/reservation.js') }}"></script>
 		<script src="{{ asset('assets/js/navBar.js') }}"></script>
+		<script src="{{ asset('assets/js/galery.js') }}"></script>
 	</body>
 </html>
