--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -37,7 +37,7 @@
 						</div>
 
 						<div class="form-group mb-3">
-							{{ form_row(registrationForm.allergies) }}
+							{{ form_row(registrationForm.allergie) }}
 						</div>
 
 						<div class="form-group mb-3">
