--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -15,24 +15,26 @@
 							<div class="card-body">
 								{{ form_start(form) }}
 								<div class="form-group mb-3">
-									{{ form_label(form.Firstname) }}
-									{{ form_widget(form.Firstname, {'attr': {'class': 'form-control'}}) }}
-									{{ form_errors(form.Firstname) }}
-								</div>
-								<div class="form-group mb-3">
 									{{ form_label(form.Lastname) }}
 									{{ form_widget(form.Lastname, {'attr': {'class': 'form-control'}}) }}
 									{{ form_errors(form.Lastname) }}
 								</div>
+
+								<div class="form-group mb-3">
+									{{ form_label(form.Firstname) }}
+									{{ form_widget(form.Firstname, {'attr': {'class': 'form-control'}}) }}
+									{{ form_errors(form.Firstname) }}
+								</div>
+
 								<div class="form-group mb-3">
 									{{ form_label(form.phone_number) }}
 									{{ form_widget(form.phone_number, {'attr': {'class': 'form-control'}}) }}
 									{{ form_errors(form.phone_number) }}
 								</div>
 								<div class="form-group mb-3">
-									{{ form_label(form.nombreCouverts) }}
-									{{ form_widget(form.nombreCouverts, {'attr': {'class': 'form-control'}}) }}
-									{{ form_errors(form.nombreCouverts) }}
+									{{ form_label(form.guestsNumber) }}
+									{{ form_widget(form.guestsNumber, {'attr': {'class': 'form-control'}}) }}
+									{{ form_errors(form.guestsNumber) }}
 								</div>
 								<div class="form-group mb-3">
 									{{ form_label(form.date) }}
