--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,10 +10,11 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/1LS4+pFOmJunior49/7rdIeszYCD2v2x9x/iT4y" crossorigin="anonymous">
 		<link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet"/>
 		<link href="{{ asset('assets/css/indexStyle.css') }}" rel="stylesheet"/>
+		<link href="{{ asset('assets/css/stylePageperso.css') }}" rel="stylesheet"/>
 	</head>
 	<body>
 		<header>
-			<nav class="navbar navbar-expand-lg navbar-light fixed-top">
+			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container-fluid">
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
