--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -4,102 +4,73 @@
 {% endblock %}
 {% block content %}
 	<main class="main_container container-fluid">
-		<div class="container-fluid">
-			<div class="container mt-4 mb-4">
-				<div class="row justify-content-center">
-					<div class="col-md-4">
-						<div class="card p-3 schudeleContainer">
-							<div class="">
-								<h3 class="text-center">Réservez une table !</h3>
-							</div>
-							<div class="card-body">
-								{{ form_start(form) }}
-								<div class="form-group mb-3">
-									{{ form_label(form.Lastname) }}
-									{{ form_widget(form.Lastname, {'attr': {'class': 'form-control'}}) }}
-									{{ form_errors(form.Lastname) }}
-								</div>
-
-								<div class="form-group mb-3">
-									{{ form_label(form.Firstname) }}
-									{{ form_widget(form.Firstname, {'attr': {'class': 'form-control'}}) }}
-									{{ form_errors(form.Firstname) }}
-								</div>
-
-								<div class="form-group mb-3">
-									{{ form_label(form.phone_number) }}
-									{{ form_widget(form.phone_number, {'attr': {'class': 'form-control'}}) }}
-									{{ form_errors(form.phone_number) }}
-								</div>
-								<div class="form-group mb-3">
-									{{ form_label(form.guestsNumber) }}
-									{{ form_widget(form.guestsNumber, {'attr': {'class': 'form-control'}}) }}
-									{{ form_errors(form.guestsNumber) }}
-								</div>
-								<div class="form-group mb-3">
-									{{ form_label(form.date) }}
-									{{ form_widget(form.date, {'attr': {'class': 'form-control', 'value' : 'date'}}) }}
-									{{ form_errors(form.date) }}
-
-								</div>
-								<div class="form-group mb-3">
-									{{ form_label(form.heure) }}
-									{{ form_widget(form.heure, {'attr': {'class': 'form-control', 'value' : 'heure'}}) }}
-								</div>
-								<div class="form-group mb-3">
-									{{ form_label(form.allergie) }}
-									{{ form_widget(form.allergie, {'attr': {'class': 'form-control','style': 'resize:none;'}}) }}
-								</div>
-								<div class="form-group text-center">
-									<button type="submit" class="btn btn-primary px-4">Réserver</button>
-								</div>
-
-								{{ form_end(form) }}
-								<button class="btn btn-primary" id='check-availability' type='' value="availability">Vérifier</button>
-								<div id="availability"></div>
-							</div>
+		<div class="container mt-4 mb-4">
+			<div class="row justify-content-center">
+				<div class="col-md-4">
+					<div class="card p-3 schudeleContainer">
+						<div class="">
+							<h3 class="text-center">Réservez une table !</h3>
 						</div>
+						<div class="card-body">
+							{{ form_start(form) }}
+							<div class="form-group mb-3">
+								{{ form_label(form.Lastname) }}
+								{{ form_widget(form.Lastname) }}
+								{{ form_errors(form.Lastname) }}
+							</div>
+
+							<div class="form-group mb-3">
+								{{ form_label(form.Firstname) }}
+								{{ form_widget(form.Firstname) }}
+								{{ form_errors(form.Firstname) }}
+							</div>
+
+							<div class="form-group mb-3">
+								{{ form_label(form.phone_number) }}
+								{{ form_widget(form.phone_number) }}
+								{{ form_errors(form.phone_number) }}
+							</div>
+							<div class="form-group mb-3">
+								{{ form_label(form.guestsNumber) }}
+								{{ form_widget(form.guestsNumber)}}
+								{{ form_errors(form.guestsNumber) }}
+							</div>
+							<div class="form-group mb-3">
+								{{ form_label(form.date) }}
+								{{ form_widget(form.date) }}
+								{{ form_errors(form.date) }}
+
+							</div>
+							<div class="form-group mb-3">
+								{{ form_label(form.heure) }}
+								{{ form_widget(form.heure) }}
+								{{ form_errors(form.date) }}
+							</div>
+							<div class="form-group mb-3">
+								{{ form_label(form.allergie) }}
+								{{ form_widget(form.allergie) }}
+							</div>
+							<div class="form-group mb-3 d-flex justify-content-center">
+								<button type="submit" class="btn btn-primary px-4">Réserver</button>
+							</div>
+							<div class="form-group text-center">
+								<h5>Disponibiliés pour le dîner</h5>
+								<div class="availability-slots">
+									<div id="time-slots" class="mt-3"></div>
+								</div>
+							</div>
+							<div class="form-group text-center">
+								<h5>Disponibiliés pour le déjeuner</h5>
+								<div class="availability-slots">
+									<div id="time-slots2" class="mt-3"></div>
+								</div>
+							</div>
+							<p>Vous pouvez réserver jusqu'à 12 personnes maximum.</p>
+						</div>
+						{{ form_end(form) }}
 					</div>
 				</div>
 			</div>
-			<div id="availability-message"></div>
-			<div id="calendar"></div>
-		</main>
-	{% endblock %}
-	{% block javascripts %}
-		{{ parent() }}
-
-		<script>
-			$(document).ready(function () { // Initialiser le calendrier
-$('#calendar').fullCalendar({
-header: {
-left: 'prev,next today',
-center: 'title',
-right: 'month,agendaWeek,agendaDay'
-},
-selectable: true,
-select: function (start, end) { // Mettre à jour les champs date et heure avec les valeurs sélectionnées dans le calendrier
-$('#reservation_date').val(start.format('YYYY-MM-DD'));
-$('#reservation_heure').val(start.format('HH:mm'));
-}
-});
-
-// Vérifier la disponibilité en temps réel lors de la soumission du formulaire
-$('#check-availability-btn').click(function () {
-$.ajax({
-url: '{{ path('reservation_check_availability') }}',
-type: 'POST',
-dataType: 'json',
-data: $('#reservation-form').serialize(),
-success: function (data) {
-if (data.available) {
-$('#availability-message').html('Une table est disponible à cette date et heure.');
-} else {
-$('#availability-message').html('Désolé, aucune table n\'est disponible à cette date et heure.');
-}
-}
-});
-});
-});
-		</script>
-	{% endblock %}
+		</div>
+	</div>
+</main>{% endblock %}
