--- a/public/assets/css/indexStyle.css
+++ b/public/assets/css/indexStyle.css
@@ -29,8 +29,14 @@ h5 {
 
 .logoQAw {
   display: flex;
-  width: 20vw;
-  height: 75vh;
+  width: 15vw;
+  height: 60vh;
+}
+
+.logoQAnav, .logoQAnavBlack {
+  display: flex;
+  width: 180px;
+  height: 60px;
 }
 
 .main_container {
@@ -42,8 +48,14 @@ h5 {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  min-height: 50vh;
+  min-height: 100vh;
   justify-content: center;
+}
+
+.loggin {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: flex-start;
 }
 
 .availabilityRight,
@@ -56,7 +68,7 @@ h5 {
 
 .loginContainer {
   background-color: rgba(255, 255, 255, 0.7);
-  margin-top: 30px;
+  margin-top: 20vh;
 }
 
 .restaurantCardSection {
@@ -257,7 +269,6 @@ footer {
 
 .MenusCard {
   border: 2px dashed rgba(255, 255, 255, 0.7);
-  /*border-image: url("../img/Crayon.svg") 20 / 20px 100px / 1 round;*/
   border-radius: 8px;
 }
 
@@ -268,7 +279,6 @@ footer {
 
 .starterCard {
   border: 2px dashed rgba(255, 255, 255, 0.7);
-  /*border-image: url("../img/Crayon.svg") 20 / 20px 100px / 1 round;*/
   border-radius: 8px;
 }
 
@@ -776,6 +786,12 @@ h5 {
   height: 75vh;
 }
 
+.logoQAnav {
+  display: flex;
+  width: 180px;
+  height: 60px;
+}
+
 .main_container {
   display: flex;
   flex-wrap: nowrap;
@@ -923,6 +939,8 @@ footer {
 .copyright {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .social{
@@ -1427,7 +1445,7 @@ aside {
   }
 
   .info{
-
+    display: flex;
     flex-direction: row;
     justify-content: flex-start;
     font-style: italic;
