--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,7 +9,7 @@
 	{% for flash_error in app.flashes('verify_email_error') %}
 		<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
 	{% endfor %}
-	<div class="container mt-4 mb-4">
+	<div class="container mb-4">
 		<div class="row justify-content-center">
 			<div class="col-md-4">
 				<div class="card p-3 registerContainer">
