--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block content %}
-	<main class="main_container container-fluid">
+	<main class="main_container container-fluid loggin">
 		<div class="container-fluid">
 			<form method="post">
 				{% if error %}
@@ -16,7 +16,7 @@
 						<b>{{ app.user.userIdentifier }}</b>.
 					</div>
 				{% endif %}
-				<div class="container mt-4">
+				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-md-4 ">
 							<div class="card p-3 loginContainer">
@@ -33,14 +33,6 @@
 										<label for="inputPassword">Mot de Passe</label>
 										<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 									</div>
-									<div class="form-group mb-3">
-										<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-										<div class="checkbox mb-3">
-											<label>
-												<input type="checkbox" name="_remember_me">
-												Se souvenir de moi
-											</label>
-										</div>
 										<div class="form-group mb-3 row justify-content-center">
 											<div class="col-12 col-md-6 d-flex justify-content-center">
 												<button class="btn btn-primary btn-block mx-auto" type="submit">Se connecter</button>
