--- a/public/assets/css/indexStyle.css
+++ b/public/assets/css/indexStyle.css
@@ -1387,7 +1387,7 @@ aside {
     align-items: center;
     width: 100%;
     border-radius: 8px;
-    padding: 10px;
+    padding-bottom: 10px;
   }
   
   .reservationAvailabilityCard{
