--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -33,10 +33,11 @@
 										<label for="inputPassword">Mot de Passe</label>
 										<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 									</div>
-										<div class="form-group mb-3 row justify-content-center">
-											<div class="col-12 col-md-6 d-flex justify-content-center">
-												<button class="btn btn-primary btn-block mx-auto" type="submit">Se connecter</button>
-											</div>
+									<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+									<div class="form-group mb-3 row justify-content-center">
+										<div class="col-12 col-md-6 d-flex justify-content-center">
+											<button class="btn btn-primary btn-block mx-auto" type="submit">Se connecter</button>
+
 										</div>
 									</div>
 								</div>
@@ -44,7 +45,7 @@
 						</div>
 					</div>
 				</div>
-			</form>
-		</div>
-	</main>
-{% endblock %}
+			</div>
+		</form>
+	</div>
+</main>{% endblock %}
